fixed overflow-x

--- a/src/app/budgets/budgets.component.scss
+++ b/src/app/budgets/budgets.component.scss
@@ -86,5 +86,6 @@
   .parent-container,
   .budgets-container-parent {
     width: 100%;
+    overflow-x: hidden;
   }
 }
